refactor: Refactor Request & Response for Genres